--- a/BasicProblem/BasicProblem.csproj
+++ b/BasicProblem/BasicProblem.csproj
@@ -46,6 +46,7 @@
     <Compile Include="PrintHello.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sum.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
