--- a/BasicProblem/BasicProblem.csproj
+++ b/BasicProblem/BasicProblem.csproj
@@ -47,6 +47,7 @@
     <Compile Include="PrintHello.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpecificOpra.cs" />
     <Compile Include="Sum.cs" />
   </ItemGroup>
   <ItemGroup>
