--- a/BasicProblem/BasicProblem.csproj
+++ b/BasicProblem/BasicProblem.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecificOpra.cs" />
     <Compile Include="Sum.cs" />
+    <Compile Include="SwappNum.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
