--- a/BasicProblem/BasicProblem.csproj
+++ b/BasicProblem/BasicProblem.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DivindingNum.cs" />
+    <Compile Include="Multiply3.cs" />
     <Compile Include="PrintHello.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
