--- a/BasicProblem/BasicProblem.csproj
+++ b/BasicProblem/BasicProblem.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Sum.cs" />
     <Compile Include="SwappNum.cs" />
     <Compile Include="Table.cs" />
+    <Compile Include="XYZOPration.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
